@@ -1,0 +1,5 @@
+<html><body>
+If you want to search for or replace with newline characters, enable
+regular expression search and insert "\n" (without the quotes)
+somewhere in the search or replacement string.
+</body></html>
